# PrimitiveNet

./: .gitmodules  LICENSE  README.md
scripts/: compile.sh  download.sh  evaluate.sh  test_scene.sh  train.sh
src/: dataset.py  eval_ap.py  eval_iou.py  model_boundary.py  test_boundary.py  test_scene.py  train_boundary.py
src/config/: abc.yaml  scene.yaml
src/cpp/: CMakeLists.txt  regiongrow.cc
src/lib/knn/: CMakeLists.txt  knn.cc
src/util/: config.py  log.py  utils.py
